--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "jsonwebtoken": "^9.0.2",
     "node-mocks-http": "^1.16.1",
     "nodemon": "^3.1.7",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "prisma": "^5.21.1",
+    "sequelize": "^6.37.5",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
