--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon -r dotenv/config app.ts dotenv_config_path=.env app.ts",
     "test": "mocha",
-    "generate-model" : "ts-node -r dotenv/config  external/cmd/generate_model.ts dotenv_config_path=.env  external/cmd/generate_model.ts "
+    "generate-model": "ts-node -r dotenv/config  external/cmd/generate_model.ts dotenv_config_path=.env  external/cmd/generate_model.ts "
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "pg-hstore": "^2.3.4",
     "prisma": "^5.21.1",
     "sequelize": "^6.37.5",
+    "sequelize-typescript": "^2.1.6",
     "sequelize-typescript-generator": "^11.0.8",
     "typescript": "^5.6.3"
   },
